# djarter

./: .env-example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
core/: settings.py  urls.py  views.py
static/: style.css
templates/: base.html  example_form.html  home.html
templates/partials/: footer.html  header.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  password_reset_sent.html  signup.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username_alter_customuser_email.py  0003_alter_customuser_managers.py
