[project]
name = "django-workout"
description = "Practice your Django with a short, daily quiz"
version = "2023.10.0"
requires-python = ">=3.11"
authors = [{ name = "Lance Goyke", email = "lance@lancegoyke.com" }]
keywords = ["Django"]

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
force_single_line = true
skip_glob = ["*migrations*"]

[tool.curlylint]
include = '\.(html|jinja)$'
exclude = '''
(
  /(
      \.eggs           # exclude a few common directories in the root of the project
    | \.git
    | \.venv
  )/
  | webpack-stats.html # also separately exclude a file named webpack-stats.html in the root of the project
)
'''

[tool.curlylint.rules]
indent = 2
image_alt = true
